--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     }
 }
 
+apply plugin: 'java'
 apply plugin: 'groovy'
 apply plugin: 'spring-boot'
 
@@ -17,6 +18,13 @@ repositories {
 dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.4.5'
     compile 'org.springframework.boot:spring-boot-starter-web'
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    compile 'com.h2database:h2:1.4.190'
+
+    compile 'com.jayway.jsonpath:json-path:0.9.1'
+
+    testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
 
 task wrapper(type: Wrapper) {
