--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
 
+    compile 'org.springframework.hateoas:spring-hateoas'
+
     compile 'com.h2database:h2:1.4.190'
 
     compile 'com.jayway.jsonpath:json-path:0.9.1'
