--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.4.5'
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+    compile 'org.springframework.boot:spring-boot-starter-data-rest'
 
     compile 'org.springframework.hateoas:spring-hateoas'
 
